--- a/public/fonts/inter.css
+++ b/public/fonts/inter.css
@@ -1,1 +1,15 @@
- 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('/fonts/Inter-roman.var.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: italic;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url('/fonts/Inter-italic.var.woff2') format('woff2');
+} 
